[gd_scene load_steps=16 format=2]

[ext_resource path="res://Mini Scenes/Pieces/PaperBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/Kayambang.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Mini Scenes/Intelligences/ObrulenaAI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mini Scenes/Scenes/Tutorial3.gd" type="Script" id=4]
[ext_resource path="res://Mini Scenes/Intelligences/KallystaAI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Mini Scenes/Intelligences/SalemAI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Mini Scenes/Pieces/StoneBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/LiberationSerif-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Mini Scenes/Popups/TutorialPopup.tscn" type="PackedScene" id=9]
[ext_resource path="res://Mini Scenes/Popups/VictoryViewer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Art/Portraits/Salem V1.png" type="Texture" id=11]
[ext_resource path="res://Art/Portraits/Obrulena Alpha.png" type="Texture" id=12]
[ext_resource path="res://Art/Portraits/Kallysta V3.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[node name="Tutorial3" type="Node"]
script = ExtResource( 4 )
victory_panel = ExtResource( 10 )
address = "res://Mini Scenes/Scenes/Tutorial3.tscn"
popupbox = ExtResource( 9 )
these_players = [ [ "Obrulena", ExtResource( 12 ) ], [ "Kallysta", ExtResource( 13 ) ], [ "Salem", ExtResource( 11 ) ] ]

[node name="NinePatchRect" parent="." instance=ExtResource( 7 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="ObjectiveArea" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" parent="ObjectiveArea" instance=ExtResource( 1 )]
anchor_left = 0.75
anchor_top = 0.4
anchor_right = 0.75
anchor_bottom = 0.4
margin_left = -170.0
margin_top = -150.0
margin_right = 170.0
margin_bottom = 150.0
mouse_filter = 1

[node name="Label" type="Label" parent="ObjectiveArea/Background"]
margin_left = 10.0
margin_top = 56.0
margin_right = 329.0
margin_bottom = 288.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "T
T
T
T"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective" type="Label" parent="ObjectiveArea/Background"]
margin_left = 9.85419
margin_top = 9.65834
margin_right = 318.854
margin_bottom = 50.6583
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objective"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SalemAI" parent="." instance=ExtResource( 6 )]

[node name="ObrulenaAI" parent="." instance=ExtResource( 3 )]

[node name="KallystaAI" parent="." instance=ExtResource( 5 )]

[node name="Audio" type="AudioStreamPlayer" parent="."]
[connection signal="advanced_popup" from="." to="." method="_on_Tutorial3_advanced_popup"]
[connection signal="advance_turn" from="SalemAI" to="." method="_on_SalemAI_advance_turn"]
[connection signal="changed_stance" from="SalemAI" to="." method="_on_SalemAI_changed_stance"]
[connection signal="closed_report" from="SalemAI" to="." method="_on_SalemAI_closed_report"]
[connection signal="forged_letter" from="SalemAI" to="." method="_on_SalemAI_forged_letter"]
[connection signal="improve_relations" from="SalemAI" to="SalemAI" method="improve_relations"]
[connection signal="opened_forgery" from="SalemAI" to="." method="_on_SalemAI_opened_forgery"]
[connection signal="pressed_info" from="SalemAI" to="." method="_on_SalemAI_pressed_info"]
[connection signal="pressed_letters" from="SalemAI" to="." method="_on_SalemAI_pressed_letters"]
[connection signal="pressed_opponent" from="SalemAI" to="." method="_on_SalemAI_pressed_opponent"]
[connection signal="send_message" from="SalemAI" to="." method="_on_SalemAI_send_message"]
[connection signal="set_relations" from="SalemAI" to="SalemAI" method="set_relations"]
[connection signal="worsen_relations" from="SalemAI" to="SalemAI" method="worsen_relations"]
